--- a/app/globals.css
+++ b/app/globals.css
@@ -109,3 +109,8 @@ main {
 .liked .like-button:hover svg {
   fill: transparent;
 }
+@media screen and (max-width:700px) {
+  main {
+    width: 100%;
+  }
+}
