--- a/components/header.module.css
+++ b/components/header.module.css
@@ -31,3 +31,9 @@
 .header ul .cta-link:hover {
     background-color: #c321e3;
 }
+@media screen and (max-width:700px) {
+  .header {
+    width: 100%;
+    padding: 5px;
+  }
+}
